zero-schema-macros/tests/ui/fail/47_optional_bool.rs
use zero_schema_macros::zero;

#[zero]
struct Invalid {
    value: Option<bool>,
}

fn main() {}
