zero-schema-macros/tests/ui/fail/47_optional_bool.stderr
error: Option<T> cannot use a primitive or bool T because the all-zero wire is valid
 --> tests/ui/fail/47_optional_bool.rs:5:19
  |
5 |     value: Option<bool>,
  |                   ^^^^
